# algoimWrapper

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/algoim-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
ext/algoim-subbuild/algoim-populate-prefix/src/algoim-populate-stamp/: algoim-populate-gitclone-lastrun.txt
ext/algoim-subbuild/algoim-populate-prefix/tmp/: algoim-populate-gitclone.cmake  algoim-populate-gitupdate.cmake
src/: algoimwrapper.cpp
